# hadoop

./: CMakeLists.txt
client/: CMakeLists.txt
client/client1/: CMakeLists.txt  Makefile  cat.cpp  client.c  client1.cpp
client/client2/: BigFile.cpp  CMakeLists.txt  DownTorrent.cpp  Download.cpp  Download.h  UpServer.h  cat  cat.cpp  downTorrent  dump_torrent.cpp  dump_torrent.h  main.cpp  makeTorrent.cpp  sample
client1/: Client_BT  cat.cpp  client.c
client2/: BigFile.h  Download.cpp  UpServer.cpp  dump_torrent.cpp  main.cpp  makefile
server/: CMakeLists.txt
server/server_multi/: BigFile.cpp  BigFile.h  CMakeCache.txt  CMakeLists.txt  Download.cpp  Download.h  DownloadPthread.cpp  DownloadPthread.h  Makefile  ModifyXML.cpp  ModifyXML.h  QueryXML.cpp  ThreadPool.cpp  ThreadPool.h  UpServer.cpp  UpServer.h  UpTorrentToTrack.cpp  UpTorrentToTrack.h  arithmetic.cpp  makeTorrent.cpp  makeTorrent.h
server/soketServer/: CMakeLists.txt  QueryXML.cpp  QueryXML.h  make_cmd  socketServer  socketServer.cpp
trackServer/: CMakeLists.txt  Makefile  trackServer.cpp  tracker
